hphp/test/zend/bad/bug51791.php
<?php

class A  {
    const B = 1;
}
var_dump(constant('A::B1'));

?>